# apprentissage_automatique

./: .gitignore  CMakeLists.txt  README.md  app.py  pyproject.toml
data/: dataset_renaming_map.csv  resize.py
data/splits/: folds.csv  test.csv
python/bindings/: c_api.py
python/common/: dataset_64x64.py  reports.py
python/data/: renaming.py  split.py
python/experiments/: debug_mlp_64x64_signal.py  export_demo_artifacts_64x64.py  run_linear_baseline_64x64.py  run_mlp_64x64.py
python/inference/: __init__.py  predict_64x64.py
reports/tables/: linear_baseline_64x64_folds.csv  linear_baseline_64x64_history.csv  linear_model_classic_tests.csv  mlp_64x64_folds.csv  mlp_64x64_history.csv  mlp_64x64_mini_balanced_history.csv  mlp_64x64_signal_probe.csv  mlp_model_classic_tests.csv
src/api/: ml_library.c  ml_library.h
src/linear/: linear_model.c  linear_model.h
src/mlp/: mlp_model.c  mlp_model.h
tests/python/: debug_mlp_xor.py  test_linear_data_conventions.py  test_linear_interface.py  test_linear_model_cases.py  test_linear_model_persistence.py  test_linear_multiclass_predict.py  test_linear_multiclass_training.py  test_mlp_interface.py  test_mlp_model_cases.py  test_mlp_model_persistence.py  test_mlp_raw_output.py
